--- a/src/ftxui_sample/CMakeLists.txt
+++ b/src/ftxui_sample/CMakeLists.txt
@@ -2,8 +2,8 @@ add_executable(intro main.cpp)
 
 target_link_libraries(
   intro
-  PRIVATE myproject::myproject_options
-          myproject::myproject_warnings)
+  PRIVATE electronic_design_automation::electronic_design_automation_options
+          electronic_design_automation::electronic_design_automation_warnings)
 
 target_link_system_libraries(
   intro
