--- a/src/libcircuit/CMakeLists.txt
+++ b/src/libcircuit/CMakeLists.txt
@@ -1,7 +1,13 @@
 include(GenerateExportHeader)
 
 
-add_library(libcircuit libcircuit.cpp)
+add_library(libcircuit 
+  ArithmeticLogicUnit.cpp
+  Formatter.cpp
+  Graph.cpp
+  Node.cpp
+  Simulator.cpp
+  Utilities.cpp)
 
 
 
