--- a/src/sample_library/CMakeLists.txt
+++ b/src/sample_library/CMakeLists.txt
@@ -1,27 +1,27 @@
 include(GenerateExportHeader)
 
 
-add_library(sample_library sample_library.cpp)
+add_library(libcircuit libcircuit.cpp)
 
 
 
-add_library(myproject::sample_library ALIAS sample_library)
+add_library(electronic_design_automation::libcircuit ALIAS libcircuit)
 
-target_link_libraries(sample_library PRIVATE myproject_options myproject_warnings)
+target_link_libraries(libcircuit PRIVATE electronic_design_automation_options electronic_design_automation_warnings)
 
-target_include_directories(sample_library ${WARNING_GUARD} PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+target_include_directories(libcircuit ${WARNING_GUARD} PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
                                                                   $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include>)
 
-target_compile_features(sample_library PUBLIC cxx_std_20)
+target_compile_features(libcircuit PUBLIC cxx_std_20)
 
 set_target_properties(
-  sample_library
+  libcircuit
   PROPERTIES VERSION ${PROJECT_VERSION}
              CXX_VISIBILITY_PRESET hidden
              VISIBILITY_INLINES_HIDDEN YES)
 
-generate_export_header(sample_library EXPORT_FILE_NAME ${PROJECT_BINARY_DIR}/include/myproject/sample_library_export.hpp)
+generate_export_header(libcircuit EXPORT_FILE_NAME ${PROJECT_BINARY_DIR}/include/electronic_design_automation/libcircuit_export.hpp)
 
 if(NOT BUILD_SHARED_LIBS)
-  target_compile_definitions(sample_library PUBLIC SAMPLE_LIBRARY_STATIC_DEFINE)
+  target_compile_definitions(libcircuit PUBLIC libcircuit_STATIC_DEFINE)
 endif()
