Code Refactoring, added first test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -28,12 +28,15 @@ find_package(GoogleTest)
 # add_test(NAME cli.version_matches COMMAND intro --version)
 # set_tests_properties(cli.version_matches PROPERTIES PASS_REGULAR_EXPRESSION "${PROJECT_VERSION}")
 
-add_executable(tests tests.cpp)
+add_executable(tests Graph.cpp)
 
 target_link_libraries(
   tests
   GTest::gtest_main
+  electronic_design_automation::libcircuit
 )
+
+target_include_directories(tests PRIVATE "${CMAKE_BINARY_DIR}/configured_files/include")
 
 include(GoogleTest)
 gtest_discover_tests(tests)
